[metadata]
name = advpyneng-cli-course
version = 1.1
description = CLI tool for running advpyneng tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natenka/advpyneng-cli-course
author = Natasha Samoylenko
author_email = "Natasha Samoylenko" <natasha.samoylenko@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    pytest-json-report>=1.2
    click
    pyyaml
    pytest
    pytest-clarity
    PyGitHub
    six
    rich
    jinja2
    textfsm

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    apyneng = advpyneng_cli_course.apyneng:cli
